--- a/css/main.css
+++ b/css/main.css
@@ -599,7 +599,6 @@ nav .nav-link {
 /*FILTROS------------------------------------------------------------------------------------*/
 #tieAutMain__cosasJS--filtros--barraDeFiltros {
   left: 10px;
-  /* Cambiado al lado izquierdo */
   background-color: black;
   color: #fff;
   border: none;
@@ -607,12 +606,10 @@ nav .nav-link {
   cursor: pointer;
   z-index: 1000; }
 
-/* Sidebar */
 .tieAutMain__cosasJS--filtros--sidebar {
   position: fixed;
   top: 0;
   left: -290px;
-  /* Oculta la barra lateral */
   width: 250px;
   height: 100%;
   background-color: #f4f4f4;
@@ -624,10 +621,8 @@ nav .nav-link {
     margin-top: 0; }
 
 .tieAutMain__cosasJS--filtros--sidebarActive {
-  left: 0;
-  /* Muestra la barra lateral */ }
+  left: 0; }
 
-/* Botón de cierre en la esquina superior derecha */
 #tieAutMain__cosasJS--filtros--sidebar--cerrarSidebar {
   position: absolute;
   top: 10px;
@@ -645,15 +640,10 @@ nav .nav-link {
 
 .hidden {
   filter: blur(10px);
-  /* Aplica el desenfoque */
   pointer-events: none;
-  /* Evita la interacción con elementos desenfocados */
   opacity: 0.5;
-  /* Reduce ligeramente la opacidad */
-  transition: filter 0.3s, opacity 0.3s;
-  /* Suaviza las transiciones */ }
+  transition: filter 0.3s, opacity 0.3s; }
 
-/* Toggle personalizado */
 .tieAutMain__cosasJS--filtros--sidebar--opciones--interruptor {
   position: relative;
   display: inline-block;
@@ -694,28 +684,34 @@ input:checked + .tieAutMain__cosasJS--filtros--sidebar--opciones--interruptor--s
 /*-----RESPONSIVE-----*/
 /*PC De La Escuela*/
 @media screen and (min-width: 1300px) and (max-width: 1400px) {
-  #tieAutMain div[id*="Datos"] h4 {
+  #tieAutMain div[class*="Datos"] h4 {
     font-size: 30px; }
-  #tieAutMain div[id*="Datos"] p {
+  #tieAutMain div[class*="Datos"] p {
     font-size: 15px; } }
 
 /*TABLET*/
-@media screen and (min-width: 421px) and (max-width: 1023px) {
+@media screen and (min-width: 481px) and (max-width: 1023px) {
+  #tieAutMain .tieAutMain__cosasJS--filtros--sidebar {
+    width: 180px; }
+  #tieAutMain .tieAutMain__cosasJS--filtros--sidebar--opciones {
+    margin: 15px 0 15px 15px; }
+  #tieAutMain #tieAutMain__cosasJS--contenedorBusqueda {
+    scale: 0.8; }
   #tieAutMain img {
     outline: 3px solid black; }
   #tieAutMain #tieAutMain__catalogo {
     grid-row-gap: 5px; }
-    #tieAutMain #tieAutMain__catalogo div[id*="Datos"] {
+    #tieAutMain #tieAutMain__catalogo div[class*="Datos"] {
       display: block;
       position: relative;
       height: auto;
       transform: translate(0px, 5px);
       outline: none; }
-      #tieAutMain #tieAutMain__catalogo div[id*="Datos"] h4 {
+      #tieAutMain #tieAutMain__catalogo div[class*="Datos"] h4 {
         font-size: 15px; }
-      #tieAutMain #tieAutMain__catalogo div[id*="Datos"] p {
+      #tieAutMain #tieAutMain__catalogo div[class*="Datos"] p {
         font-size: 10px; }
-    #tieAutMain #tieAutMain__catalogo div[id*="Img"] {
+    #tieAutMain #tieAutMain__catalogo div[class*="Img"] {
       height: 140px; }
     #tieAutMain #tieAutMain__catalogo .tieAut__grid--marcas > div:hover {
       scale: 1; }
@@ -726,58 +722,67 @@ input:checked + .tieAutMain__cosasJS--filtros--sidebar--opciones--interruptor--s
 @media screen and (min-width: 0px) and (max-width: 480px) {
   #tieAutMain img {
     outline: 3px solid black; }
+  #tieAutMain .tieAutMain__cosasJS--filtros--sidebar {
+    width: 180px; }
+  #tieAutMain .tieAutMain__cosasJS--filtros--sidebar--opciones {
+    margin: 15px 0 15px 15px; }
+  #tieAutMain #tieAutMain__cosasJS--contenedorBusqueda {
+    scale: 0.6;
+    transform: translate(0, -40px); }
+  #tieAutMain #tieAutMain__cosasJS--filtros--barraDeFiltros {
+    scale: 0.7; }
   #tieAutMain #tieAutMain__catalogo {
     grid-row-gap: 5px;
     /*-------------*/ }
-    #tieAutMain #tieAutMain__catalogo div[id*="Datos"] {
+    #tieAutMain #tieAutMain__catalogo div[class*="Datos"] {
       display: grid;
       grid-row-gap: 2px;
       position: relative;
       height: auto;
       transform: translate(0px, 5px);
       outline: none; }
-      #tieAutMain #tieAutMain__catalogo div[id*="Datos"] h4 {
+      #tieAutMain #tieAutMain__catalogo div[class*="Datos"] h4 {
         font-size: 10px; }
-      #tieAutMain #tieAutMain__catalogo div[id*="Datos"] p {
+      #tieAutMain #tieAutMain__catalogo div[class*="Datos"] p {
         font-size: 7px; }
-      #tieAutMain #tieAutMain__catalogo div[id*="Datos"]:hover {
+      #tieAutMain #tieAutMain__catalogo div[class*="Datos"]:hover {
         scale: 1; }
-        #tieAutMain #tieAutMain__catalogo div[id*="Datos"]:hover img {
+        #tieAutMain #tieAutMain__catalogo div[class*="Datos"]:hover img {
           filter: none; }
-    #tieAutMain #tieAutMain__catalogo div[id*="Img"] {
+    #tieAutMain #tieAutMain__catalogo div[class*="Img"] {
       height: 170px; }
-    #tieAutMain #tieAutMain__catalogo .tieAut__grid--marcas {
+    #tieAutMain #tieAutMain__catalogo .tieAutMain__catalogo--marcas {
       grid-template-columns: 1fr;
       grid-template-rows: 1fr repeat(3, 7.7fr); }
     #tieAutMain #tieAutMain__catalogo .tieAut__grid--marcas > div {
       padding: 0 0 30px 0; }
     #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--honda {
-      grid-template-areas: 'titHonda' 'honda1' 'honda2' 'honda3'; }
+      grid-template-areas: 'titHonda'; }
       #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--honda h2 {
         grid-area: titHonda; }
-    #tieAutMain #tieAutMain__catalogo #audi {
-      grid-template-areas: 'titAudi' 'audi1' 'audi2' 'audi3'; }
-      #tieAutMain #tieAutMain__catalogo #audi h2 {
+    #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--audi {
+      grid-template-areas: 'titAudi'; }
+      #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--audi h2 {
         grid-area: titAudi; }
-    #tieAutMain #tieAutMain__catalogo #chevrolet {
-      grid-template-areas: 'titChevr' 'chevr1' 'chevr2' 'chevr3'; }
-      #tieAutMain #tieAutMain__catalogo #chevrolet h2 {
+    #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--chevrolet {
+      grid-template-areas: 'titChevr'; }
+      #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--chevrolet h2 {
         grid-area: titChevr; }
-    #tieAutMain #tieAutMain__catalogo #renault {
-      grid-template-areas: 'titRena' 'rena1' 'rena2' 'rena3'; }
-      #tieAutMain #tieAutMain__catalogo #renault h2 {
+    #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--renault {
+      grid-template-areas: 'titRena'; }
+      #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--renault h2 {
         grid-area: titRena; }
-    #tieAutMain #tieAutMain__catalogo #ford {
-      grid-template-areas: 'titFord' 'ford1' 'ford2' 'ford3'; }
-      #tieAutMain #tieAutMain__catalogo #ford h2 {
+    #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--ford {
+      grid-template-areas: 'titFord'; }
+      #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--ford h2 {
         grid-area: titFord; }
-    #tieAutMain #tieAutMain__catalogo #fiat {
-      grid-template-areas: 'titFiat' 'fiat1' 'fiat2' 'fiat3'; }
-      #tieAutMain #tieAutMain__catalogo #fiat h2 {
+    #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--fiat {
+      grid-template-areas: 'titFiat'; }
+      #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--fiat h2 {
         grid-area: titFiat; }
-    #tieAutMain #tieAutMain__catalogo #nissan {
-      grid-template-areas: 'titNiss' 'niss1' 'niss2' 'niss3'; }
-      #tieAutMain #tieAutMain__catalogo #nissan h2 {
+    #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--nissan {
+      grid-template-areas: 'titNiss'; }
+      #tieAutMain #tieAutMain__catalogo #tieAutMain__catalogo--marcas--nissan h2 {
         grid-area: titNiss; } }
 
 .prods__body {
